<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/asset3" />

        <EditText
            android:id="@+id/rgEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/lg_Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/lg_Pass"
            android:inputType="textPassword" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/rgBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/daftar" />

        <TextView
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:id="@+id/textlg"
            android:text="@string/rg_kata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>